--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<div class="container">
 					<div id="whole-story" class="clearfix">
-						<h1><em>Venu and Anunyas</em> Restaurant</h1>
+						<h1><em>Venus</em> Restaurant</h1>
 						<p class="lead">we want to show the world what a real donut tastes like</p>
 					<div id="story-excerpt">
 							<p>
